client/public/css/style.css
/*
  Theme Name: Alstar
  Theme URL: https://bootstrapmade.com/alstar-free-parallax-bootstrap-template/
  Author: BootstrapMade.com
  Author URL: https://bootstrapmade.com
*/

/* ================================
Imports
================================= */
@import url('font-awesome.min.css');
@import url('simpletextrotator.css');
@import url('overwrite.css');
@import url('animate.css');

/* ================================
General
================================= */

body {
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  line-height: 1.6em;
}

h1 {
  font-size: 36px;
}
h2 {
  font-size: 32px;
}
h3 {
  font-size: 28px;
}
h4 {
  font-size: 24px;
}
h5 {
  font-size: 20px;
}
h6 {
  font-size: 18px;
}

h1,
h2,
h3,
h4,
h5,
h6,
.h1,
.h2,
.h3,
.h4,
.h5,
.h6 {
  color: #3a3a3a;
  font-weight: 700;
  margin-bottom: 20px;
  font-family: 'Montserrat', sans-serif;
}

.lead {
  font-weight: 400;
}

button {
  display: inline-block;
  margin-bottom: 0;
  margin-bottom: 10px;
  padding: 6px 12px;
  border: 1px solid transparent;
  vertical-align: middle;
  text-align: center;
  white-space: nowrap;
  font-weight: normal;
  font-size: 14px;
  line-height: 1.428571429;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}
button.navbar-toggle {
  background: #2b2b2b;
  border: none;
  color: #fff;
}

.btn-theme,
.btn-theme:hover,
.btn-theme:focus {
  color: #fff;
}
.btn-theme:hover {
  background: transparent !important;
  border-color: #999;
  color: #999;
}

/* ================================
margin, padding
================================= */
.mar-top0 {
  margin-top: 0;
}
.mar-top10 {
  margin-top: 10px;
}
.mar-top20 {
  margin-top: 20px;
}
.mar-top30 {
  margin-top: 30px;
}
.mar-top40 {
  margin-top: 40px;
}

/* Back to top button */
.back-to-top {
  position: fixed;
  display: none;
  padding: 6px 12px 9px 12px;
  font-size: 16px;
  border-radius: 2px;
  right: 15px;
  bottom: 15px;
  transition: background 0.5s;
  z-index: 1000;
}

@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }
}

.back-to-top:focus {
  outline: none;
}

/* ================================
Helpers
================================= */

.flex-wrap-and-center {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.justify-center {
  display: flex;
  justify-content: center;
}

/* ================================
Team image gallery
================================= */

.gallery {
  display: flex;
  flex-wrap: wrap;
}

.gallery-img {
  width: 100px;
  height: 110px;
  object-fit: cover;
  margin: 10px;
}

@media (max-width: 400px) {
  .btn.filter {
    padding-left: 1.1rem;
    padding-right: 1.1rem;
    margin: 10px;
    border-radius: 4px;
  }
}

/* ================================
Navbar
================================= */

nav.navbar {
  position: fixed;
  top: -72px;
  margin-bottom: 0px;
  padding: 10px 0px 10px 0px;
  width: 100%;
  border-radius: 0px;
  transition: all 0.2s;
}

.navbar-nav {
  float: right;
}

nav.navbar.fixed-to-top {
  top: 0px;
}

.navbar-default {
  border: none;
  border-bottom: none;
  opacity: 1;
  display: none;
  z-index: 9999;
}

.navbar-default .navbar-nav > li > a {
  color: #fff;
  font-weight: 700;
  text-transform: uppercase;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #3a3a3a;
  cursor: pointer;
  -webkit-transition: all 300ms ease-in-out;
  -moz-transition: all 300ms ease-in-out;
  -ms-transition: all 300ms ease-in-out;
  -o-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  outline: 0;
}

/* brand / logo */
.navbar-default .navbar-brand {
  color: #fff;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 2em;
}

/* ================================
Home sections
================================= */

.home-section {
  width: 100%;
  padding: 60px 0;
}

/* --- heading --- */
.section-heading {
  margin-bottom: 50px;
}

.section-heading h2 {
  font-size: 38px;
  text-transform: uppercase;
}

.section-heading .heading-line {
  margin: 0 auto;
  display: block;
  height: 1px;
  width: 80px;
  background: #333;
  margin-top: 10px;
  margin-bottom: 20px;
}

/* --- section bg var --- */

.bg-white {
  background: #fff;
}

.bg-gray {
  background: #f8f8f8;
}

.bg-dark {
  background: #575757;
}

/* --- section content general color --- */

.color-light h1,
.color-light h2,
.color-light h3,
.color-light h4,
.color-light h5,
.color-light h6 {
  color: #fff;
}

.color-light p {
  color: #eee;
}

/* ==========================
Parallax
============================= */

#parallax1 {
  background-image: url(../img/parallax/1.jpg);
}
#parallax2 {
  background-image: url(../img/parallax/2.jpg);
}

.parallax-overlay {
  padding: 80px 25px;
  background-color: rgba(0, 0, 0, 0.5);
  width: 100%;
}

.parallax {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#tjanster-utformar {
  background-image: url(https://images.unsplash.com/photo-1508424757105-b6d5ad9329d0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80);
}
#tjanster-bygger {
  background-image: url(https://images.unsplash.com/photo-1509453721491-c3af5961df76?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80);
}
#tjanster-driver {
  background-image: url(https://images.unsplash.com/photo-1461886988361-c3d1d47fd6f6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
}

/* ================================
Intro
================================= */

#intro {
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.3);
}

#intro .item {
  width: 100%;
  height: 100vh;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
/* ... */

